--- a/index.html
+++ b/index.html
@@ -154,16 +154,16 @@
 		<div class="container-fluid padding">
 			<div class="row text-center">
 				<div class="col-sm-6 col-md-3">
-					<img src="img/gif/panda.gif" alt="" class="gif">
+					<img src="panda.gif" alt="" class="gif">
 				</div>
 				<div class="col-sm-6 col-md-3">
-					<img src="img/gif/poo.gif" alt="" class="gif">
+					<img src="poo.gif" alt="" class="gif">
 				</div>
 				<div class="col-sm-6 col-md-3">
-					<img src="img/gif/unicorn.gif" alt="" class="gif">
+					<img src="unicorn.gif" alt="" class="gif">
 				</div>
 				<div class="col-sm-6 col-md-3">
-					<img src="img/gif/chicken.gif" alt="" class="gif">
+					<img src="chicken.gif" alt="" class="gif">
 				</div>
 
 			</div>
